OBMFULL-6190 Fix community and new top bar popin overlapping webmail UI

--- a/ui/resources/themes/default/styles/topbar.css
+++ b/ui/resources/themes/default/styles/topbar.css
@@ -288,7 +288,7 @@ form {
 
 #webmail_iframe {
   position:absolute;
-  top: 50px;
+  top: 55px;
   left: 0;
   border:none;
   width:100%;
